added MacOS support and ran full program once

--- a/1_ASP_Scheduler.ipynb
+++ b/1_ASP_Scheduler.ipynb
@@ -2704,8 +2704,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# We illustrate the generation of a scheduling problem using a local model  (using chain-of-thought and few-shot prompting)\n",
     "# Notice you have to have your api-key under .env\n",
     "\n",
@@ -2715,10 +2713,9 @@
     "from ASP_Scheduler.problem_descriptions import all_problems\n",
     "from ASP_Scheduler import scheduler\n",
     "import os\n",
+    "import torch\n",
     "from datetime import datetime\n",
     "from utils import logger\n",
-    "\n",
-    "os.environ[\"BNB_CUDA_VERSION\"] = \"123\"   # Force bnb to libbitsandbytes_cuda123.dll for running a local model (Bits and bytes 12.4 doesn't exist yet, so we force Cuda 12.3)\n",
     "\n",
     "###########################################################\n",
     "#                        SETTINGS                         #\n",
@@ -2732,15 +2729,22 @@
     "\n",
     "# REMOTE SETTINGS\n",
     "REMOTE_PIPE = None # None defaults to meta-llama/Meta-Llama-3-8B-Instruct\n",
-    "REMOTE_PIPE = 'deepseek' # 'deepseek' model on OpenAI API\n",
+    "#REMOTE_PIPE = 'deepseek' # 'deepseek' model on OpenAI API\n",
     "\n",
     "# LOCAL SETTINGS\n",
-    "CHECKPOINT, CHECKPOINT_SHORT_NAME = \"meta-llama/Meta-Llama-3-8B-Instruct\", \"Llama-3-8B-Instruct\" \n",
+    "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"meta-llama/Meta-Llama-3-8B-Instruct\", \"Llama-3-8B-Instruct\" \n",
     "CHECKPOINT, CHECKPOINT_SHORT_NAME = \"Qwen/Qwen2.5-7B-Instruct\", \"Qwen2.5-7B-Instruct\"\n",
     "\n",
-    "# QUANTIZATION SETTINGS\n",
-    "QUANTIZATION_CONFIG = '4bit'  # '4bit' or '8bit' for 4 or 8-bit quantization (faster, less memory)\n",
-    "QUANTIZATION_CONFIG = None # None for no quantization (full model, slower, more memory)\n",
+    "# DYNAMIC HARDWARE CONFIGURATION\n",
+    "if torch.cuda.is_available():\n",
+    "    # Settings for NVIDIA GPUs\n",
+    "    print(\"CUDA detected. Using NVIDIA configuration.\")\n",
+    "    os.environ[\"BNB_CUDA_VERSION\"] = \"123\"  # Force bnb version for Windows/Cuda if needed\n",
+    "    QUANTIZATION_CONFIG = '4bit'          # '4bit', '8bit' supported on CUDA\n",
+    "else:\n",
+    "    # Settings for Mac (MPS) or CPU\n",
+    "    print(\"CUDA not detected. Using MPS/CPU configuration (Quantization disabled).\")\n",
+    "    QUANTIZATION_CONFIG = None            # bitsandbytes quantization is not supported on MPS yet\n",
     "\n",
     "# SAMPLING / REPRODUCIBILITY SETTINGS\n",
     "# - Set SEED = -1 to disable fixed seeding (non-deterministic runs). Set to an integer for reproducible runs.\n",
@@ -2834,7 +2838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
