experiments also tested

--- a/1_ASP_Scheduler.ipynb
+++ b/1_ASP_Scheduler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1293,10 +1293,10 @@
     "# LOCAL SETTINGS\n",
     "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"meta-llama/Meta-Llama-3-8B-Instruct\", \"Llama-3-8B-Instruct\" \n",
     "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"Qwen/Qwen2.5-7B-Instruct\", \"Qwen2.5-7B-Instruct\"\n",
-    "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_qwen_mlx\", \"Qwen2.5-7B-FT\"  # Local finetuned Qwen-2.5-7B with MLX-LoRA\n",
+    "CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_qwen_mlx\", \"Qwen2.5-7B-Instruct\" \n",
     "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_llama_mlx\", \"Llama-3-8B-Instruct\"\n",
     "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_llama_pytorch\", \"Llama-3-8B-Instruct\"\n",
-    "CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_qwen_pytorch\", \"Qwen2.5-7B-FT\" \n",
+    "#CHECKPOINT, CHECKPOINT_SHORT_NAME = \"./local_models/ft_qwen_pytorch\", \"Qwen2.5-7B-Instruct\" \n",
     "\n",
     "# DYNAMIC HARDWARE CONFIGURATION\n",
     "if torch.cuda.is_available():\n",
