update finetuning readme

--- a/Finetuning/notebooks/ft_pytorch_qlora.ipynb
+++ b/Finetuning/notebooks/ft_pytorch_qlora.ipynb
@@ -188,8 +188,16 @@
     "data_folder = os.path.join(get_root_path(), \"Finetuning\", \"data\")\n",
     "adapter_path = os.path.join(get_root_path(), \"Finetuning\", \"adapters\", MODEL_TYPE + \"_pytorch\")\n",
     "os.makedirs(adapter_path, exist_ok=True)\n",
-    "fused_output = get_output_dir(MODEL_TYPE, \"pytorch\")\n",
-    "\n",
+    "fused_output = get_output_dir(MODEL_TYPE, \"pytorch\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "808ed4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_pytorch(\n",
     "    model_path=base_model, \n",
     "    data_folder=data_folder, \n",
@@ -199,14 +207,6 @@
     "    iters=20\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "808ed4c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
