--- a/Finetuning/notebooks/data_converter.ipynb
+++ b/Finetuning/notebooks/data_converter.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d58318d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: Finetuning\\data\\Benchmark Data\n",
+      "Output old: Finetuning\\data\\oud\n",
+      "Output: Finetuning\\data\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -15,16 +25,22 @@
     "sys.path.append('..')\n",
     "from utils_ft import get_root_path, to_relative\n",
     "from scripts.data_converter import generate_asp_dataset\n",
+    "from scripts.data_converter_2 import generate_asp_dataset_2\n",
     "\n",
-    "# Resolve absolute paths using the utility\n",
+    "# Define paths\n",
     "root = get_root_path()\n",
     "data_root = os.path.join(root, \"Finetuning\", \"data\", \"Benchmark Data\")\n",
-    "output_dir = os.path.join(root, \"Finetuning\", \"data\")"
+    "output_dir_oud = os.path.join(root, \"Finetuning\", \"data\", \"oud\")\n",
+    "output_dir = os.path.join(root, \"Finetuning\", \"data\")\n",
+    "\n",
+    "print(f\"Input: {to_relative(data_root)}\")\n",
+    "print(f\"Output old: {to_relative(output_dir_oud)}\")\n",
+    "print(f\"Output: {to_relative(output_dir)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d97f0959",
    "metadata": {},
    "outputs": [
@@ -41,6 +57,7 @@
     }
    ],
    "source": [
+    "# Generate the data one-shot like from NL -> ASP and IR -> ASP\n",
     "print(f\"Processing data from: ./{to_relative(data_root)}\")\n",
     "train_count, valid_count = generate_asp_dataset(data_root, output_dir)\n",
     "\n",
@@ -52,7 +69,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "456d04e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traversing c:\\Users\\arjan\\SchASPLM-Shamantics\\Finetuning\\data\\Benchmark Data...\n",
+      "Found 27 problem instances.\n",
+      "\n",
+      "Success!\n",
+      "Training Examples: 21\n",
+      "Validation Examples: 6\n",
+      "Files saved in: ./Finetuning\\data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This now generates multi-turn conversations based on comments in the ASP files\n",
+    "train_count, valid_count = generate_asp_dataset_2(data_root, output_dir)\n",
+    "\n",
+    "print(f\"\\nSuccess!\")\n",
+    "print(f\"Training Examples: {train_count}\")\n",
+    "print(f\"Validation Examples: {valid_count}\")\n",
+    "print(f\"Files saved in: ./{to_relative(output_dir)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "ee904248",
    "metadata": {},
    "outputs": [
@@ -60,61 +107,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- SAMPLE CONVERSATION (27 turns) ---\n",
+      "[SYSTEM]:\n",
+      "You are an expert AI researcher. Translate the following problem description into syntactically correct Clingo ASP code step-by-step.\n",
       "\n",
-      "--- DATA SAMPLE ---\n",
-      "SOURCE TYPE: IR\n",
-      "PROMPT: The rover starts at BaseCamp.\n",
-      "Inspect OutpostX and OutpostY exactly once each.\n",
-      "Optionally inspect RelayStation.\n",
-      "Moves between adjacent nodes takes 1 timestep.\n",
-      "Each inspection requires 1 full timestep at the inspection site.\n",
-      "Each movement consumes 1 battery unit.\n",
-      "The battery stores 6 units.\n",
-      "Only allow inspection of RelayStation if there are >2 battery units once the other sites are scanned.\n",
-      "Locations: BaseCamp, Fork1, Fork2, OutpostX, OutpostY, RelayStation.\n",
-      "Edges: (BaseCamp–Fork1), (BaseCamp–Fork2), (Fork1–OutpostX), (Fork1–RelayStation), (Fork2–OutpostY), (Fork2–RelayStation).\n",
-      "10 Minutes maximum time.\n",
+      "### Problem Description:\n",
+      "You’re coordinating a series of eight graduate workshops across two days.\n",
+      "Each workshop focuses on one of three subjects: Artificial Intelligence\n",
+      "(AI), Mathematics, or Biology. The event spans two full days, and each\n",
+      "day is divided into three time slots: morning, midday, and afternoon.\n",
+      "You have access to three rooms where these workshops can be held.\n",
+      "Every workshop must be placed somewhere in the schedule — that is,\n",
+      "assigned to at least one session at a specific room and a specific time on\n",
+      "one of the two days.\n",
+      "No two workshops can occupy the same room at the same time, and each\n",
+      "room is limited to a maximum of two workshops per day. So, on any\n",
+      "given day, each room will have at least one unused time slot.\n",
+      "However, one of the rooms comes with a constraint: Room 2 is unavailable\n",
+      "in the afternoon, on both days. You’ll need to avoid scheduling anything\n",
+      "there during that time.\n",
+      "Topic-specific requirements further shape the schedule. AI workshops must\n",
+      "always be held in the morning, so they cannot be scheduled at midday or\n",
+      "in the afternoon. Math workshops must not overlap with each other in\n",
+      "time, meaning that no two math sessions can occur simultaneously\n",
+      " — even if they’re in different rooms. In addition, AI and Biology\n",
+      "workshops must not share a room on the same day. If an AI session\n",
+      "takes place in a given room on a given day, then no Biology session\n",
+      "can be placed in that room on that day, and vice versa.\n",
+      "Finally, to ensure balanced subject coverage, each day must include at\n",
+      "least one workshop from each topic — AI, Math, and Bio — so no subject\n",
+      "is omitted from a day’s agenda.\n",
+      "When choosing among valid schedules, it’s preferable to use space\n",
+      "efficiently: try to fill as many available slots as possible while\n",
+      "respecting all the constraints. The fewer unused room-times, the better.\n",
       "\n",
-      "TARGET: % Locations: BaseCamp, Fork1, Fork2, OutpostX, OutpostY, RelayStation\n",
-      "loc(\"BaseCamp\"; \"Fork1\"; \"Fork2\"; \"OutpostX\"; \"OutpostY\"; \"RelayStation\").\n",
+      "[USER]:\n",
+      "Implement: There are 8 graduate workshops.\n",
       "\n",
-      "% Edges\n",
-      "edge(\"BaseCamp\", \"Fork1\").\n",
-      "edge(\"BaseCamp\", \"Fork2\").\n",
-      "edge(\"Fork1\", \"OutpostX\").\n",
-      "edge(\"Fork1\", \"RelayStation\").\n",
-      "edge(\"Fork2\", \"OutpostY\").\n",
-      "edge(\"Fork2\", \"RelayStation\").\n",
+      "[ASSISTANT]:\n",
+      "workshop(1..8).\n",
       "\n",
-      "% 10 Minutes maximum time.\n",
-      "time(0..10).\n",
+      "[USER]:\n",
+      "Implement: Workshops are in AI, Math, or Bio.\n",
       "\n",
-      "% The rover starts at BaseCamp.\n",
-      "at(\"BaseCamp\", 0).\n",
+      "[ASSISTANT]:\n",
+      "topic(\"AI\"; \"Math\"; \"Bio\").\n",
+      "1 {topicOf(W, T) : topic(T)} 1 :- workshop(W).\n",
       "\n",
-      "% Inspect OutpostX and OutpostY exactly once each.\n",
-      "1 { inspect_at(\"OutpostX\", T) : time(T) } 1.\n",
-      "1 { inspect_at(\"OutpostY\", T) : time(T) } 1.\n",
+      "[USER]:\n",
+      "Implement: There are 2 days, with 3 time slots per day: morning, midday, and afternoon.\n",
       "\n",
-      "% Moves between adjacent nodes takes 1 timestep.\n",
-      "1 { at(L, T) : loc(L) } 1 :- time(T).\n",
-      ":- at(L1, T), at(L2, T+1), not edge(L1, L2), not edge(L2, L1), L1 != L2.\n",
+      "[ASSISTANT]:\n",
+      "day(1..2).\n",
+      "slot(\"morning\"; \"midday\"; \"afternoon\").\n",
       "\n",
-      "% Each inspection requires 1 full timestep at the inspection site.\n",
-      "at(L, T) :- inspect_at(L, T).\n",
-      "at(L, T+1) :- inspect_at(L, T), T < 10.\n",
+      "[USER]:\n",
+      "Implement: There are 3 rooms.\n",
       "\n",
-      "% Each movement consumes 1 battery unit.\n",
-      "move(L1, L2, T) :- at(L1, T), at(L2, T+1), edge(L1, L2), L1 != L2.\n",
-      "used_battery(N, T) :- N = #count { T1 : move(_, _, T1), T1 < T }, time(T).\n",
+      "[ASSISTANT]:\n",
+      "room(1..3).\n",
       "\n",
-      "% The battery stores 6 units.\n",
-      "remaining_battery(N1, T) :- used_battery(N2, T), N1 = 6 - N2.\n",
+      "[USER]:\n",
+      "Implement: Each workshop must be scheduled.\n",
       "\n",
-      "% Only allow inspection of RelayStation if there are >2 battery units once the other sites are scanned.\n",
-      "0 { inspect_at(\"RelayStation\", T) : time(T) } 1.\n",
-      ":- inspect_at(\"RelayStation\", _), remaining_battery(N, T), N <= 2, sites_scanned(T).\n",
-      "sites_scanned(T) :- T = #max { T1 : inspect_at(L, T1), L != \"RelayStation\"}.\n",
+      "[ASSISTANT]:\n",
+      "1 {scheduled(W, R, S, D) : room(R), slot(S), day(D)} :- workshop(W).\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: Only one workshop can be in a room at a time.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- scheduled(W1, R, S, D), scheduled(W2, R, S, D), W1 != W2.\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: Each room can be used at most twice per day.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      "{scheduled(W, R, S, D) : workshop(W), slot(S)} 2 :- room(R), day(D).\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: Room 2 is not available in the afternoon.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- scheduled(_, 2, \"afternoon\", _).\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: AI workshops must be in the morning.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- scheduled(W, _, S, _), topicOf(W, \"AI\"), S != \"morning\".\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: No two Math workshops can be scheduled at the same time.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- scheduled(W1, _, S, D), scheduled(W2, _, S, D), topicOf(W1, \"Math\"), topicOf(W2, \"Math\"), W1 != W2.\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: Bio and AI cannot be in the same room on the same day.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- scheduled(W1, R, _, D), scheduled(W2, R, _, D), topicOf(W1, \"Bio\"), topicOf(W2, \"AI\").\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: At least one workshop of each topic must be held on each day.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      ":- day(D), topic(T), not scheduled(W, _, _, D) : topicOf(W, T).\n",
+      "\n",
+      "[USER]:\n",
+      "Implement: Try to minimize idle room slots.\n",
+      "\n",
+      "[ASSISTANT]:\n",
+      "used(R, S, D) :- scheduled(_, R, S, D).\n",
+      "idle(R, S, D) :- room(R), slot(S), day(D), not used(R, S, D).\n",
+      "#minimize {1, R, S, D : idle(R, S, D)}.\n",
       "\n"
      ]
     }
@@ -123,14 +230,22 @@
     "sample_file = os.path.join(output_dir, \"train.jsonl\")\n",
     "\n",
     "with open(sample_file, 'r', encoding='utf-8') as f:\n",
-    "    sample = json.loads(f.readline())\n",
+    "    # Read the first line\n",
+    "    line = f.readline()\n",
+    "    sample = json.loads(line)\n",
     "\n",
-    "print(\"\\n--- DATA SAMPLE ---\")\n",
-    "# Logic to check if it's NL or IR based on system prompt content\n",
-    "system_content = sample['messages'][0]['content']\n",
-    "print(f\"SOURCE TYPE: {'Natural Language' if 'natural' in system_content.lower() else 'IR'}\")\n",
-    "print(f\"PROMPT: {sample['messages'][1]['content']}\")\n",
-    "print(f\"TARGET: {sample['messages'][2]['content']}\")"
+    "print(f\"--- SAMPLE CONVERSATION ({len(sample['messages'])} turns) ---\")\n",
+    "\n",
+    "# Print the first few messages to verify the flow\n",
+    "for msg in sample['messages']: \n",
+    "    role = msg['role'].upper()\n",
+    "    content = msg['content']\n",
+    "    \n",
+    "    # Truncate long content for display\n",
+    "    #if len(content) > 200:\n",
+    "        #content = content[:200] + \"... [truncated]\"\n",
+    "        \n",
+    "    print(f\"[{role}]:\\n{content}\\n\")"
    ]
   },
   {
@@ -158,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
