--- a/Finetuning/notebooks/data_converter.ipynb
+++ b/Finetuning/notebooks/data_converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d58318d1",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "text": [
       "Processing data from: ./Finetuning\\data\\Benchmark Data\n",
       "Success!\n",
-      "Train examples: 43\n",
-      "Validation examples: 11\n",
+      "Train examples: 108\n",
+      "Validation examples: 27\n",
       "Files saved in: ./Finetuning\\data\\oud\n"
      ]
     }
@@ -91,11 +91,11 @@
      "output_type": "stream",
      "text": [
       "Traversing c:\\Users\\arjan\\SchASPLM-Shamantics\\Finetuning\\data\\Benchmark Data...\n",
-      "Found 27 problem instances.\n",
+      "Found 108 problem instances.\n",
       "\n",
       "Success!\n",
-      "Training Examples: 21\n",
-      "Validation Examples: 6\n",
+      "Training Examples: 86\n",
+      "Validation Examples: 22\n",
       "Files saved in: ./Finetuning\\data\\een_op_een\n"
      ]
     }
@@ -121,12 +121,12 @@
      "output_type": "stream",
      "text": [
       "Traversing c:\\Users\\arjan\\SchASPLM-Shamantics\\Finetuning\\data\\Benchmark Data...\n",
-      "Found 27 unique problem instances.\n",
-      "Splitting: 21 problems for Training, 6 for Validation.\n",
+      "Found 108 unique problem instances.\n",
+      "Splitting: 86 problems for Training, 22 for Validation.\n",
       "\n",
       "Success!\n",
-      "Training Examples: 105\n",
-      "Validation Examples: 30\n",
+      "Training Examples: 430\n",
+      "Validation Examples: 110\n",
       "Files saved in: ./Finetuning\\data\\best_zonder_syntax\n"
      ]
     }
@@ -153,12 +153,12 @@
      "output_type": "stream",
      "text": [
       "Traversing c:\\Users\\arjan\\SchASPLM-Shamantics\\Finetuning\\data\\Benchmark Data...\n",
-      "Found 27 unique problem instances.\n",
-      "Splitting: 21 Train, 6 Valid.\n",
+      "Found 108 unique problem instances.\n",
+      "Splitting: 86 Train, 22 Valid.\n",
       "\n",
       "Success!\n",
-      "Training Examples: 126\n",
-      "Validation Examples: 36\n",
+      "Training Examples: 516\n",
+      "Validation Examples: 132\n",
       "Files saved in: ./Finetuning\\data\\niet_maximaal\n"
      ]
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a3be1739",
    "metadata": {},
    "outputs": [
@@ -185,12 +185,12 @@
      "output_type": "stream",
      "text": [
       "Traversing c:\\Users\\arjan\\SchASPLM-Shamantics\\Finetuning\\data\\Benchmark Data...\n",
-      "Found 27 unique problem instances.\n",
-      "Splitting: 21 Train, 6 Valid.\n",
+      "Found 27 unique logical problems (spanning 108 folders).\n",
+      "Splitting: 21 Problem Groups for Training, 6 for Validation.\n",
       "\n",
       "Success!\n",
-      "Training Examples: 882\n",
-      "Validation Examples: 198\n",
+      "Training Examples: 1197\n",
+      "Validation Examples: 288\n",
       "Files saved in: ./Finetuning\\data\n"
      ]
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ee904248",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- RANDOM SAMPLE (Total Examples: 882) ---\n",
+      "--- RANDOM SAMPLE (Total Examples: 1197) ---\n",
       "\n",
       "[SYSTEM]:\n",
       "--------------------\n",
@@ -226,17 +226,17 @@
       "[USER]:\n",
       "--------------------\n",
       "The following code has an error:\n",
-      "{{scheduled(W, R, S, D) : workshop(W), slot(S)}} 2 :- room(R), day(D).\n",
+      ":- schedule(1, R, T), R != 1\n",
       "\n",
       "Clingo Error:\n",
-      "error: syntax error, unexpected {\n",
+      "error: syntax error, unexpected <EOF>, expecting .\n",
       "\n",
       "Fix the code.\n",
       "============================================================\n",
       "\n",
       "[ASSISTANT]:\n",
       "--------------------\n",
-      "{scheduled(W, R, S, D) : workshop(W), slot(S)} 2 :- room(R), day(D).\n",
+      ":- schedule(1, R, T), R != 1.\n",
       "============================================================\n"
      ]
     }
